--- a/dthwebsite.css
+++ b/dthwebsite.css
@@ -11,6 +11,10 @@ body, h1, h2, h3, p, ul, ol, nav {
     background-color: #fff;
 }
 
+h1 {
+  font-size: 60px;
+}
+
 header {
     text-align: center;
     background-color: #6a0dad;
